# laser_scan_obstacle_detection

./: .travis.yml  CMakeLists.txt  README.MD  package.xml  travis_prepare.bash
include/: obstacle_detection.h
msg/: Object_direction.msg
src/: obstacle_detection.cpp  obstacle_detection_node.cpp
